# git-interfaces

./: .gitignore  deps.bzl  go.mod
.github/workflows/: bazel-go.yml
concepts/: architecture.md  feature_list.md  modules.md
git-objects/: BUILD.bazel  git-objects.go
gitutils/: BUILD.bazel  gitutils.go  gitutils_test.go
http/: BUILD.bazel  http.go  http_test.go
redis-repo/: BUILD.bazel  redis-repo-old.go  redis-repo.go  redis-repo_test.go
