load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
# gazelle:prefix github.com/JPCM-e-V/git-interfaces/gitutils

go_library(
    name = "gitutils",
    srcs = ["gitutils.go"],
    importpath = "github.com/JPCM-e-V/git-interfaces/gitutils",
    visibility = ["//visibility:public"],
)

go_test(
    name = "gitutils_test",
    srcs = ["gitutils_test.go"],
    embed = [":gitutils"],
)
