load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
# gazelle:prefix github.com/JPCM-e-V/git-interfaces/redis-repo

go_library(
    name = "redis-repo",
    srcs = ["redis-repo.go"],
    importpath = "github.com/JPCM-e-V/git-interfaces/redis-repo",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_redis_redis_v8//:redis"],
)

go_test(
    name = "redis-repo_test",
    srcs = ["redis-repo_test.go"],
    embed = [":redis-repo"],
)
